<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_page_padding"
    android:paddingEnd="@dimen/default_page_padding"
    tools:context=".layout.fragments.route_info.RouteInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/route_info_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/circle"
            android:cropToPadding="true"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/route_info_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_progress_text"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="@id/route_info_image"
            app:layout_constraintStart_toStartOf="@id/route_info_image"
            app:layout_constraintTop_toBottomOf="@id/route_info_image"/>

        <TextView
            android:id="@+id/route_info_trophy_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trophy_progress"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="@id/route_info_image"
            app:layout_constraintStart_toStartOf="@id/route_info_image"
            app:layout_constraintTop_toBottomOf="@id/route_info_progress" />

        <TextView
            android:id="@+id/route_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waypoints"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/route_info_trophy_progress" />

        <TextView
            android:id="@+id/route_info_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/route_info_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/route_info_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lorem100"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/route_info_desc_title" />

        <TextView
            android:id="@+id/route_info_contributor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contributors"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/route_info_desc"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/route_info_contributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lorem100"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/route_info_contributor_title" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>