<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".layout.fragments.poi_list.PoiListOverview">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poi_list_route_picture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:cropToPadding="true"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            android:background="@drawable/circle"
            app:srcCompat="@drawable/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/poi_list_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_progress_text"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@id/poi_list_route_picture"
            app:layout_constraintStart_toStartOf="@id/poi_list_route_picture"
            app:layout_constraintTop_toBottomOf="@id/poi_list_route_picture" />

        <TextView
            android:id="@+id/poi_list_trophy_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            android:text="@string/trophy_progress"
            app:layout_constraintEnd_toEndOf="@id/poi_list_route_picture"
            app:layout_constraintStart_toStartOf="@id/poi_list_route_picture"
            app:layout_constraintTop_toBottomOf="@id/poi_list_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waypoints"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintTop_toBottomOf="@id/poi_list_trophy_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/poi_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="de.jadehs.vcg.layout.behaviours.RecyclerViewNestedScrollBehaviour"
        tools:listitem="@layout/poi_list_item"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

