<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/audio_control_play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/play_button_description"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:tint="@drawable/black_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audio_control_progress_bar"
            app:srcCompat="@drawable/exo_icon_play" />

        <ImageButton
            android:id="@+id/audio_control_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="@dimen/audio_control_button_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/next_button_description"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:tint="@drawable/black_button"
            app:backgroundTint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/audio_control_play_pause_button"
            app:layout_constraintStart_toEndOf="@id/audio_control_play_pause_button"
            app:layout_constraintTop_toTopOf="@id/audio_control_play_pause_button"
            app:srcCompat="@drawable/exo_icon_next" />

        <ImageButton
            android:id="@+id/audio_control_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="@dimen/audio_control_button_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/previous_button_description"
            android:scaleType="fitCenter"
            android:tint="@drawable/black_button"
            app:backgroundTint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/audio_control_play_pause_button"
            app:layout_constraintEnd_toStartOf="@id/audio_control_play_pause_button"
            app:layout_constraintTop_toTopOf="@id/audio_control_play_pause_button"
            app:srcCompat="@drawable/exo_controls_previous" />

        <TextView
            android:id="@+id/audio_control_track_number_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/dummy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/audio_control_title_name"/>

        <TextView
            android:id="@+id/audio_control_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/audio_control_progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:valueFrom="0"
            android:valueTo="1000"
            app:labelBehavior="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audio_control_title_name"
            app:thumbRadius="7dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>