<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme.PrimarySurface"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:focusable="true"
        app:cardCornerRadius="30dp"
        app:contentPadding="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.625" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <TextView
                android:id="@+id/RouteName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/dummy"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintEnd_toStartOf="@+id/route_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/route_progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="20"
                app:layout_constraintBottom_toTopOf="@id/route_progress_text"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/route_image"
                android:layout_width="0px"
                android:layout_height="0px"
                android:cropToPadding="true"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/route_image_description"
                android:background="@drawable/circle"/>

            <TextView
                android:id="@+id/route_progress_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="@id/route_image"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/route_progress_bar" />

            <Button
                android:id="@+id/information_route_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:text="@string/info"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/route_progress_text" />

            <Button
                android:id="@+id/continue_route_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                android:text="@string/continue_text"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/route_progress_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>